# ScriptSculpt

./: CMakeLists.txt  README.md
src/: ConstLetter.cpp  ConstLetter.h  GASolver.cpp  GASolver.h  LetterAlignment.cpp  LetterAlignment.h  PluginMain.cpp  ScriptSculptCommand.cpp  ScriptSculptCommand.h  ScriptSculptGUI.mel  deformation.cpp  deformation.h  main.cpp  openGA.hpp  sceneStruct.h  trace_skeleton.cpp  utilities.cpp  utilities.h
src/mel/: ScriptSculptGUI.mel
visualization/letter_as_curves/: main.py
